@@ -1,3 +1,10 @@
+2012-02-13  Martin Hoeller <martin.hoeller@xss.co.at>
+
+    Bug 3425881/Patch 3450234 by Patrick Schlott/Christoph Schroeder,
+    reviewed by Richard West
+    * org/jfree/chart/rendered/xy/XYDifferenceRenderer
+    (drawItemPass0): Fix problems with identical x-values.
+
 2012-02-08  Martin Hoeller <martin.hoeller@xss.co.at>
 
     Bug 3484403:
